# Terrafik

./: README.md  package-lock.json  package.json  route-diff.patch
backend/: .gitignore  COMPLETE_STARTUP_GUIDE.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LOCAL_TESTING_GUIDE.md  ML_INTEGRATION_SUMMARY.txt  PREDICTION_API_SETUP.md  QUICK_REFERENCE.md  README.md  README_LOCAL_MODEL.md  STARTUP_GUIDE.md  pyproject.toml  requirements.txt  setup.sh  test_prediction_api.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  auth.py  prediction.py
backend/app/core/: __init__.py  config.py  supabase.py
backend/app/ml/: __init__.py  model.py
backend/app/schemas/: __init__.py  auth.py  prediction.py
backend/app/services/: prediction.py
backend/migrations/: 01_create_predictions_table.sql
src/app/: layout.tsx  page.tsx
src/app/(main)/mymap/: page.tsx
src/app/api/search/: route.ts
src/components/: header.tsx  logo.tsx
